# Master2

./: README.md
Apprentissage_Profond_Renforcement/: README.md
Apprentissage_Profond_Renforcement/Annee_precedente/TP1_Keras/: Intro_Keras.ipynb  README.md
Apprentissage_Profond_Renforcement/Annee_precedente/TP2_Backpropagation/: Backpropagation_numpy.ipynb
Apprentissage_Profond_Renforcement/Annee_precedente/TP3_AutoEncoder/: autoencoderTODO.ipynb
Apprentissage_Profond_Renforcement/Annee_precedente/TP4_Adversarial/: README.md  adversarial_example_tocomplete.ipynb
Apprentissage_Profond_Renforcement/Annee_precedente/TP5_Detect/: README.md
Apprentissage_Profond_Renforcement/TP1/: README.md  backprop_numpy.ipynb
Apprentissage_Profond_Renforcement/TP1/solutions/: keras_model.py  keras_model_test_loss.py  loss_predict_accuracy.py  neural_net.py  numpy_nll.py  sigmoid.py  tf_model.py  tf_squared_norm.py  tf_train.py  worst_predictions.py
Apprentissage_Profond_Renforcement/TP1_Keras/: Intro_Keras.ipynb
Apprentissage_Profond_Renforcement/TP2/: Keras.ipynb
Apprentissage_Profond_Renforcement/TP2/solutions/: classify_webcam.py  grey_levels.py  inception_resnet_v2.py  keras_accuracy_on_test_set.py  keras_adam.py  keras_initializations.py  keras_initializations_analysis.py  keras_sgd_and_momentum.py
Apprentissage_Profond_Renforcement/TP2_Backpropagation/: README.md
Apprentissage_Profond_Renforcement/TP3/: README.md  Samuel_LEBERRE.npy  pavia.ipynb  result_SLB.npy
Apprentissage_Profond_Renforcement/TP3_AutoEncoder/: README.md
Apprentissage_Profond_Renforcement/TP4/: README.md  Samuel_LEBERRE.npy  TP4_pavia.ipynb
Apprentissage_Profond_Renforcement/TP4_Adversarial/network/: mnist_loader.py  network.py
Apprentissage_Profond_Renforcement/TP5_Detect/: TP_CNN.txt
Apprentissage_Profond_Renforcement/TP6_Graph/: README.md  TP_GCN.ipynb
Apprentissage_Profond_Renforcement/TP_Autres_Equipes/: GAN_TP.ipynb  Reinforcement Learning with Q-Learning.ipynb  TP_Transformers.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/: INF3003_Deep_notes.xlsx
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Agarkov Oleksandr_16587963_assignsubmission_file_/: TP_ObjectDetection_Agarkov_Oleksandr.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Audurier Jules_16587979_assignsubmission_file_/: objectDetection.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Bouder Ewen_16587968_assignsubmission_file_/: Bouder_ObjetDetection.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Dembiermont Arthur_16587974_assignsubmission_file_/: TP_Object_Detection_Dembiermont_Arthur.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Duhamel Alexy_16587973_assignsubmission_file_/: Object_Detection_Alexy_Duhamel.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Gousset Johan_16587980_assignsubmission_file_/: ObjectDetection.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Hamon Maxime_16587956_assignsubmission_file_/: TP.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Hervé Maxime_16587960_assignsubmission_file_/: OD_Hervé_Maxime.ipynb
Apprentissage_Profond_Renforcement/TP_ObjectDetection_notation/Sadikou Faroud_16587981_assignsubmission_file_/: object_detection_Faroud_SADIKOU.ipynb
Interaction_Mobile/: README.md
Interaction_Mobile/ChatBot/: README.md
Interaction_Mobile/ChatBot/serveurHeroku/: index.js  (+2 more)
Mouvement_Et_IA/: README.md
Mouvement_Et_IA/Article/: Notes_Presentation.md  README.md
Mouvement_Et_IA/TP1/: Makefile  README.md  TP1_Samuel_LEBERRE.ipynb  dtw.py  levenshtein.py  lsc.py
Mouvement_Et_IA/TP1_Levenshtein/: README.md  dtw.py  levenshtein.py
Mouvement_Et_IA/TP2/: TP2_Samuel_LEBERRE.ipynb  fichier.bvh  test_bvh_extract.ipynb  walking.bvh  write_walking.bvh_5.bvh  write_walking.bvh_500.bvh
Mouvement_Et_IA/TP2/MocapReaderViewerThibaut/MotionPlayer/src/Lib/: AnimatedChain.cpp  AnimatedChain.h  CMakeLists.txt  GUI.h  Renderer.h
Mouvement_Et_IA/TP2/MocapReaderViewerThibaut/MotionPlayer/src/WinSkeletonTuner/: AppliEditing.cpp  AppliEditing.h  CMakeLists.txt  MathIntersections.h  SkeletonTuner.h  SkeletonTunerApp.h
Mouvement_Et_IA/TP2_PCA/MocapReaderViewerThibaut/MotionPlayer/: CMakeLists.txt
Mouvement_Et_IA/TP2_PCA/MocapReaderViewerThibaut/MotionPlayer/DATA/: _translationAbs
Mouvement_Et_IA/TP2_PCA/MocapReaderViewerThibaut/MotionPlayer/lib/Debug/: Lib.lib  glfw.lib
Mouvement_Et_IA/TP2_PCA/MocapReaderViewerThibaut/MotionPlayer/src/: CMakeLists.txt
Mouvement_Et_IA/TP2_PCA/MocapReaderViewerThibaut/MotionPlayer/src/Lib/: Application.cpp  Application.h  Common.h  FontRenderer.cpp  FontRenderer.h  GUI.cpp  Renderer.cpp
Mouvement_Et_IA/TP2_PCA/MocapReaderViewerThibaut/MotionPlayer/src/WinApp/: AppliEditing.cpp  CMakeLists.txt
Mouvement_Et_IA/TP2_PCA/MocapReaderViewerThibaut/MotionPlayer/src/WinSkeletonTuner/: Main.cpp  SkeletonTuner.cpp  SkeletonTunerApp.cpp
Mouvement_Et_IA/TP3/: TP3_Samuel_LEBERRE.ipynb
Mouvement_Et_IA/TP3_HMM/: TP3_Samuel_LEBERRE.ipynb  diagramme_etat.puml  modele.docx
Mouvement_Et_IA/TP4_Reco/: .gitignore  TP_Reco.ipynb  TP_Reco_Samuel_LEBERRE.ipynb
Mouvement_Et_IA/TP_Reco/: .gitignore  TP_Reco.ipynb
Projet_Personnel/: README.md
Projet_Personnel_Mediation_Scientifique/: Notes_Presentation_Finale.txt  RDV_Erwan_Gensac.txt  RDV_Romain_Le_Gall.txt  README.md
Sciences_Données_Fouille_Web/: .gitignore  Projet.ipynb  README.md  flux_rss.txt
Sciences_Données_Fouille_Web/RSS_Intelligence/: Makefile  README.md  clean.py  launchClassif.py  main.py
Sciences_Données_Fouille_Web/TP1/: .gitignore  MAKEFILE  Makefile  README.md  database.dir  feed.py  feed_collector.ipynb
Sciences_Données_Fouille_Web/TP2/: README.md  TP2_ElasticSearch.ipynb  TutoElasticSearch-1.py  test_elastic.py
Simulation_Applications_Interactives/: README.md
Stage/: ficheDescriptiveStage2020_MGDIS.odt
Stage/CV_LM/: CV_07-10-20.docx  LM_07-10-20.docx  ~$_07-10-20.docx
Stage/Entretrien/: CapGemini.txt
(+68 files in other folders)
